iceberg/iceberg-handler/src/test/queries/negative/get_variant_index_non_array.q
SELECT variant_get(parse_json('{"a": 1}'), '$[0]');